# ex3

./: .gitignore  README.md  details.txt
src/: BMP.cpp  BMP.h  CMakeLists.txt  FileToObject.cpp  FileToObject.hpp  Operation.cpp  Operation.hpp  cacheManager.cpp  cacheManager.hpp  crc32.c  crc32.cpp  crc32.h  main.cpp
src/bmp/: bmp_tester.cpp
src/cache/: FileToObject.hpp
src/matrix/: CMatrix.cpp  CMatrix.h  ErrorCode.h
